fix debian control file
git-svn-id: svn://repo.hu/yget/trunk@46 5d7ccc2e-3d3d-4a69-aa5d-d189249cec18

--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Tibor Palinkas <yget@inno.bme.hu>
 
 Package: yget
-Architecture: any
+Architecture: all
 Depends: wget
 Description: youtube video downloader
  This software downloads a video from youtube using its url, saving
