use curl instead of wget (deb dependency)
git-svn-id: svn://repo.hu/yget/trunk@85 5d7ccc2e-3d3d-4a69-aa5d-d189249cec18

--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Maintainer: Tibor Palinkas <yget@inno.bme.hu>
 
 Package: yget
 Architecture: all
-Depends: wget
+Depends: curl
 Description: youtube video downloader
  This software downloads a video from youtube using its url, saving
  the user the hassle to use flash.
